Chart - add to playlist scrollbar fix

--- a/public/stylesheets/charts.less
+++ b/public/stylesheets/charts.less
@@ -356,7 +356,7 @@
   position: relative;
   margin: 0 auto;
   overflow-y: auto;
-  max-height: 200px;
+  max-height: 100px;
   background: darken(@foreground_variant, 10%);
   box-shadow: black 0px 0px 20px inset;
   border: 1px solid @foreground_variant;
